--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
     <div class="wrapper">
 
       <section>
-        <div id="title">
+        <div class="title">
           <h1>KTools</h1>
           <p>The tools.</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/sakapon">sakapon</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
 <h3>Welcome to KTools</h3>
@@ -48,6 +45,11 @@
   <li><a href="2015/PlanetClock/">Planet Clock</a></li>
 </ul>
 
+        <div class="title">
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/sakapon">sakapon</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
       </section>
 
     </div>
