--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
           <p>The tools.</p>
         </div>
 
-<h3>Welcome to KTools</h3>
 <p>This site hosts apps to download and install.</p>
 
 <h3>2013</h3>
@@ -43,6 +42,8 @@
 <h3>2015</h3>
 <ul>
   <li><a href="2015/PlanetClock/">Planet Clock</a></li>
+  <li><a href="2015/DepthMeasure/">Depth Measure</a></li>
+  <li><a href="2015/VisionPlate/">Vision Plate</a></li>
 </ul>
 
         <div class="title">
