--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
   <li><a href="2015/VisionPlate/">Vision Plate</a></li>
 </ul>
 
+<h3>2016</h3>
+<ul>
+  <li><a href="https://github.com/sakapon/Tools-2016/wiki/File-Splitter">File Splitter</a></li>
+</ul>
+
         <div class="title">
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/sakapon">sakapon</a></span>
