--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <h3>2016</h3>
 <ul>
   <li><a href="https://github.com/sakapon/Tools-2016/wiki/File-Splitter">File Splitter</a></li>
+  <li><a href="2016/IntelliRpsLeap/IntelliRpsLeap.application">Intelli-RPS for Leap Motion</a></li>
 </ul>
 
         <div class="title">
